set up edit and delete pages

--- a/JsonPlaceholder/create-user.html
+++ b/JsonPlaceholder/create-user.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
     <header>
       <nav>
         <a href="users.html" class="active">Users</a>
-        <a href="create-user.html">Go here</a>
+        <a href="delete-user.html">Delete</a>
+        <a href="edit-user.html">Edit</a>
       </nav>
     </header>
     <main>
