trying to get edit page to populate

--- a/JsonPlaceholder/edit-user.html
+++ b/JsonPlaceholder/edit-user.html
@@ -14,19 +14,23 @@
     </header>
     <main>
       <form>
-        <label for="name-input">Name:</label>
-        <input type="text" id="name-input" />
+        <label for="name-field">Name:</label>
+        <input type="text" id="name-field" />
 
-        <label for="new-user-name-input">UserName:</label>
-        <input type="text" id="new-user-name-input" />
+        <label for="user-name-field">UserName:</label>
+        <input type="text" id="user-name-field" />
 
-        <label for="new-email-input">Email:</label>
-        <input type="text" id="new-email-input" />
+        <label for="email-field">Email:</label>
+        <input type="text" id="email-field" />
 
-        <button id="submit-new-user" type="button">Submit</button>
+        <button id="submit-edited-user-button" type="button">Submit</button>
       </form>
+ 
     </main>
     <footer></footer>
     <script src="scripts/edit-user.js"></script>
   </body>
 </html>
+
+
+
