possilby got delete working

--- a/JsonPlaceholder/edit-user.html
+++ b/JsonPlaceholder/edit-user.html
@@ -13,19 +13,9 @@
       </nav>
     </header>
     <main>
-      <form>
-        <label for="name-field">Name:</label>
-        <input type="text" id="name-field" />
-
-        <label for="user-name-field">UserName:</label>
-        <input type="text" id="user-name-field" />
-
-        <label for="email-field">Email:</label>
-        <input type="text" id="email-field" />
-
-        <button id="submit-edited-user-button" type="button">Submit</button>
-      </form>
- 
+      <p>Are you sure you want to delete this user?</p>
+      <button id="yes-button">Yes</button>
+      <button id="no-button">No</button>
     </main>
     <footer></footer>
     <script src="scripts/edit-user.js"></script>
