--- a/JsonPlaceholder/delete-user.html
+++ b/JsonPlaceholder/delete-user.html
@@ -10,22 +10,14 @@
     <header>
       <nav>
         <a href="users.html" class="active">Users</a>
+      </nav>
     </header>
-
     <main>
-      <h1>Users</h1>
-      <table>
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Username</th>
-            <th>Email</th>
-          </tr>
-        </thead>
-        <tbody id="usersTableBody"></tbody>
-      </table>
+      <p>Are you sure you want to delete this user?</p>
+      <button id="yes-button">Yes</button>
+      <button id="no-button">No</button>
     </main>
-
+    <footer></footer>
     <script src="scripts/delete-user.js"></script>
   </body>
 </html>
