--- a/JsonPlaceholder/edit-user.html
+++ b/JsonPlaceholder/edit-user.html
@@ -23,7 +23,7 @@
         <label for="email-field">Email:</label>
         <input type="text" id="email-field" />
 
-        <button id="submit-edited-user">Submit</button>
+        <button id="submit-edited-user" type="button">Submit</button>
       </form>
     </main>
     <footer></footer>
