working on modal

--- a/JsonPlaceholder/users.html
+++ b/JsonPlaceholder/users.html
@@ -13,11 +13,12 @@
         <a href="users.html" class="active">Users</a>
       </nav>
     </header>
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    <div id="message-div"></div>
+    <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
       Delete
-    </button>
+    </button> -->
     
-    <!-- Modal -->
+   
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
